syntax = "proto3";

package auth;

option go_package = "/auth";


service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc ValidateToken(TokenRequest) returns (TokenResponse);

    // rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string token_type = 2;
    // string refresh_token = 3;
    User user = 3;
}

message RegisterRequest {
    string name = 1;
    int32 role_id = 2;
    string email = 4;
    string password = 5;
}

message RegisterResponse {
    string status  = 1;
    string message = 2;
}

message TokenRequest {
    string access_token = 1;
}

message TokenResponse {
    string status = 1;
    string message = 2;
    User user = 3;
}


message User {
    int64 id = 1;
    int64 role_id = 2;
    string name = 3;
    string email = 5;
}

// message RefreshTokenRequest {
//     string refresh_token = 1;
// }

// message RefreshTokenResponse {
//     string access_token = 1;
//     string token_type = 2;
//     User user = 3;
// }